Fixed Navbar, Fixed Product Cards misaligned issue, Created GET Request to RestDB

--- a/css/navbarFooter.css
+++ b/css/navbarFooter.css
@@ -5,6 +5,8 @@
 
 .navbarDetails {
   margin: 0;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
 #navbar .nav-link {
@@ -13,9 +15,19 @@
   transition: all 0.2s linear;
 }
 
+#navbar .navbar-brand {
+  margin-right: 0px;
+}
+
 #navbar .navbar-brand img {
   width: 150px;
   height: 100%;
+  margin-left: 0px;
+}
+
+#navbar .navbar-nav {
+  position: absolute;
+  left: 350px;
 }
 
 #navbar.openSearch .nav-link {
@@ -31,29 +43,31 @@
   color: var(--primary-color);
 }
 
-#navbar #logo {
-  margin-left: 2rem;
-  width: 300px;
-}
-
 #navbarNav {
   justify-content: center;
 }
 
 #navbarNav .nav-item {
-  width: 146px;
+  /* width: 146px; */
+  margin-right: 30px;
+  margin-left: 30px;
 }
 
 #navbar .icons {
   display: block;
-  width: 300px;
+  /* width: 300px; */
 }
 
 .icons .icon {
   font-size: 1.2em;
   color: var(--font-color);
-  padding-right: 3em;
+  padding-right: 60px;
   cursor: pointer;
+}
+
+#profile-image-login {
+  filter: invert(100%) sepia(20%) saturate(701%) hue-rotate(246deg)
+    brightness(113%) contrast(100%);
 }
 
 .icon:hover {
@@ -134,6 +148,22 @@
 
 .autocom-box li:hover {
   background-color: #efefef;
+}
+
+/* Nav Bar Profile Picture */
+.profile-link {
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+  border-radius: 50%;
+  width: 2rem; /* Adjust the width to match the size of Bootstrap icons */
+  height: 2rem; /* Adjust the height to match the size of Bootstrap icons */
+}
+
+.profile-image {
+  width: 90%;
+  height: 90%;
+  object-fit: cover;
 }
 
 /* responsive */
