--- a/css/productCard-component.css
+++ b/css/productCard-component.css
@@ -1,6 +1,6 @@
 #productListing {
-  max-width: 1400px;
-  display: grid;
+  /* max-width: 1400px; */
+  display: flex;
   grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   grid-gap: 2em;
   width: 100%;
@@ -17,6 +17,8 @@
   background-color: #2b2b2b;
   border: 1px solid #eceff133;
   border-radius: 15px;
+  max-width: 25vw;
+  max-height: 50vh;
 }
 
 .card:hover::before {
